src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_1_evaluator.snap
---
source: src/tests/identifier_expression/mod.rs
expression: evaluation
---
String {
    value: "this is a multiple words...\n",
}
