src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_1_lexical_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
assertion_line: 51
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "sentence",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 14,
        },
    },
    PositionedToken {
        token: String {
            literal: "this is a multiple words...\n",
        },
        position: Position {
            line: 1,
            column: 16,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 47,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "sentence",
        },
        position: Position {
            line: 2,
            column: 1,
        },
    },
]
