src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_1_syntax_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "sentence",
            expression: String {
                literal: "this is a multiple words...\n",
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "sentence",
        },
    },
]
