src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_2_environment.snap
---
source: src/tests/identifier_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "csv_content": String {
                    value: "col_1\tcol_2\tcol_3\n",
                },
            },
            enclosing: None,
        },
    },
}
