src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_2_lexical_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
assertion_line: 51
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "csv_content",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 17,
        },
    },
    PositionedToken {
        token: String {
            literal: "col_1\tcol_2\tcol_3\n",
        },
        position: Position {
            line: 1,
            column: 19,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 42,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "csv_content",
        },
        position: Position {
            line: 2,
            column: 1,
        },
    },
]
