src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_2_syntax_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "csv_content",
            expression: String {
                literal: "col_1\tcol_2\tcol_3\n",
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "csv_content",
        },
    },
]
