src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_3_environment.snap
---
source: src/tests/identifier_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "double": Function {
                    parameters: [
                        "x",
                    ],
                    block: Block {
                        nodes: [
                            Expression {
                                expression: Infix {
                                    left_hand: Identifier {
                                        identifier: "x",
                                    },
                                    operator: Multiply,
                                    right_hand: Integer {
                                        literal: 2,
                                    },
                                },
                            },
                        ],
                    },
                    ..
                },
            },
            enclosing: None,
        },
    },
}
