src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_3_lexical_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
assertion_line: 51
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "double",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 12,
        },
    },
    PositionedToken {
        token: Function,
        position: Position {
            line: 1,
            column: 14,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 16,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 1,
            column: 17,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 18,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 1,
            column: 20,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 1,
            column: 22,
        },
    },
    PositionedToken {
        token: Multiply,
        position: Position {
            line: 1,
            column: 24,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 2,
        },
        position: Position {
            line: 1,
            column: 26,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 1,
            column: 28,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 29,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "double",
        },
        position: Position {
            line: 2,
            column: 1,
        },
    },
]
