src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_3_syntax_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "double",
            expression: Function {
                parameters: [
                    "x",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: MultiplyInfix {
                                left_hand: Identifier {
                                    identifier: "x",
                                },
                                right_hand: Integer {
                                    literal: 2,
                                },
                            },
                        },
                    ],
                },
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "double",
        },
    },
]
